log
vi., 18 de mar. de 2022 15:11:42: 
 list.c | 42 +++++++++++++++++++++++++++++++++++++-----
 1 file changed, 37 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:78:29: error: 'return' with a value, in function returning void [-Werror]
     if(list == NULL) return NULL;
                             ^~~~
list.c:76:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
76b716b
vi., 18 de mar. de 2022 15:12:25: 
 list.c | 6 ------
 1 file changed, 6 deletions(-)
 tests:  9|3
total_score: 35/70
8a267fe
vi., 18 de mar. de 2022 15:14:58: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:77:29: error: 'return' with a value, in function returning void [-Werror]
     if(list == NULL) return NULL;
                             ^~~~
list.c:76:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
list.c:78:5: error: 'nuevo' undeclared (first use in this function)
     nuevo = createNode(data);
     ^~~~~
list.c:78:5: note: each undeclared identifier is reported only once for each function it appears in
cc1.exe: all warnings being treated as errors
Compilation failed
50fde04
vi., 18 de mar. de 2022 15:15:19: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:77:29: error: 'return' with a value, in function returning void [-Werror]
     if(list == NULL) return NULL;
                             ^~~~
list.c:76:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
list.c:78:11: error: unused variable 'nuevo' [-Werror=unused-variable]
     Node *nuevo = createNode(data);
           ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
29d4ea8
vi., 18 de mar. de 2022 15:17:00: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:77:29: error: 'return' with a value, in function returning void [-Werror]
     if(list == NULL) return NULL;
                             ^~~~
list.c:76:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
5ebc7b8
vi., 18 de mar. de 2022 15:17:18: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
51ad7a1
vi., 18 de mar. de 2022 15:22:57: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:87:5: error: expected expression before '}' token
     }
     ^
list.c:87:5: error: 'return' with a value, in function returning void [-Werror]
list.c:76:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
98e62db
vi., 18 de mar. de 2022 15:23:18: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
06d2ef0
vi., 18 de mar. de 2022 15:24:29: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
116cd7b
vi., 18 de mar. de 2022 15:37:15: 
 list.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:117:5: error: expected ';' before '}' token
     }
     ^
Compilation failed
1432651
vi., 18 de mar. de 2022 15:37:23: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
78784d3
sá., 19 de mar. de 2022 19:27:39: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
71f2354
sá., 19 de mar. de 2022 19:33:13: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
e7cfce7
sá., 19 de mar. de 2022 19:37:46: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:122:32: error: expected identifier before '=' token
     list -> current -> next -> = nuevo;
                                ^
Compilation failed
3f7da10
sá., 19 de mar. de 2022 19:38:09: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
5d234fe
sá., 19 de mar. de 2022 19:49:24: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:139:22: error: 'return' with no value, in function returning non-void [-Werror]
     if(list == NULL) return;
                      ^~~~~~
list.c:138:8: note: declared here
 void * popCurrent(List * list) {
        ^~~~~~~~~~
list.c:140:33: error: 'return' with no value, in function returning non-void [-Werror]
     if(list -> current == NULL) return;
                                 ^~~~~~
list.c:138:8: note: declared here
 void * popCurrent(List * list) {
        ^~~~~~~~~~
list.c:142:14: error: variable or field 'aux' declared void
         void aux = *(list -> current -> data);
              ^~~
list.c:142:20: error: dereferencing 'void *' pointer [-Werror]
         void aux = *(list -> current -> data);
                    ^~~~~~~~~~~~~~~~~~~~~~~~~~
list.c:142:20: error: void value not ignored as it ought to be
         void aux = *(list -> current -> data);
                    ^
list.c:144:16: error: return makes pointer from integer without a cast [-Werror=int-conversion]
         return aux;
                ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
766ef4e
sá., 19 de mar. de 2022 19:50:16: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:142:14: error: variable or field 'aux' declared void
         void aux = *(list -> current -> data);
              ^~~
list.c:142:20: error: dereferencing 'void *' pointer [-Werror]
         void aux = *(list -> current -> data);
                    ^~~~~~~~~~~~~~~~~~~~~~~~~~
list.c:142:20: error: void value not ignored as it ought to be
         void aux = *(list -> current -> data);
                    ^
list.c:144:16: error: return makes pointer from integer without a cast [-Werror=int-conversion]
         return aux;
                ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
d99d109
sá., 19 de mar. de 2022 19:56:35: 
 list.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:142:9: error: unknown type name 'auxNode'
         auxNode * createNode(list -> current -> data);
         ^~~~~~~
list.c:142:35: error: expected ')' before '->' token
         auxNode * createNode(list -> current -> data);
                                   ^~
list.c:146:16: error: 'auxNode' undeclared (first use in this function)
         return auxNode -> data;
                ^~~~~~~
list.c:146:16: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
b5b5ee6
sá., 19 de mar. de 2022 19:57:04: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:142:22: error: expected '=', ',', ';', 'asm' or '__attribute__' before '*' token
         Node auxNode * createNode(list -> current -> data);
                      ^
list.c:142:22: error: value computed is not used [-Werror=unused-value]
         Node auxNode * createNode(list -> current -> data);
                      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
list.c:146:16: error: 'auxNode' undeclared (first use in this function)
         return auxNode -> data;
                ^~~~~~~
list.c:146:16: note: each undeclared identifier is reported only once for each function it appears in
cc1.exe: all warnings being treated as errors
Compilation failed
08204c0
sá., 19 de mar. de 2022 19:57:27: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
15acab3
sá., 19 de mar. de 2022 20:01:20: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
3de12d2
sá., 19 de mar. de 2022 20:05:03: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
45b6131
sá., 19 de mar. de 2022 20:05:55: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 55/70
81157e9
sá., 19 de mar. de 2022 20:07:01: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
41ca6e4
sá., 19 de mar. de 2022 20:11:37: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  0|0
46f39b6
